Adding CSS styling

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,1 +1,10 @@
 /* Add CSS Styling */
+.avatar .proportioned{
+    width: 300px;
+}
+.avatar{
+    width: 200px;
+}
+.distorted{
+    height: 400px;
+}
