Fixed CSS style

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,10 +1,9 @@
 /* Add CSS Styling */
 .avatar .proportioned{
     width: 300px;
+    height: auto;
 }
-.avatar{
+.avatar .distorted{
     width: 200px;
-}
-.distorted{
     height: 400px;
 }
